--- a/UPPHercegovina.WebApplication/Views/BuyerProducts/GradeProduct.cshtml
+++ b/UPPHercegovina.WebApplication/Views/BuyerProducts/GradeProduct.cshtml
@@ -28,6 +28,7 @@
         @Html.HiddenFor(model => model.Bruto)
         @Html.HiddenFor(model => model.HarvestDate)
         @Html.HiddenFor(model => model.ExparationDate)
+        @Html.HiddenFor(model => model.InWarehouse)
 
         @Html.HiddenFor(model => model.CircaValue)
         @Html.HiddenFor(model => model.Value)
