--- a/UPPHercegovina.WebApplication/Views/BuyerRequests/Edit.cshtml
+++ b/UPPHercegovina.WebApplication/Views/BuyerRequests/Edit.cshtml
@@ -6,6 +6,11 @@
 }
 
 <h2>Izmjena zahtjeva</h2>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+<script src="/resources/demos/external/jquery-mousewheel/jquery.mousewheel.js"></script>
 
 @using (Html.BeginForm())
 {
@@ -58,3 +63,8 @@
 <div>
     @Html.ActionLink("Nazad na listu", "Index")
 </div>
+<script>
+    $("#DateOfPickUp").datepicker({
+        dateFormat: 'mm-dd-yy'
+    });
+</script>
