--- a/UPPHercegovina.WebApplication/Views/UserMemberships/Edit.cshtml
+++ b/UPPHercegovina.WebApplication/Views/UserMemberships/Edit.cshtml
@@ -37,7 +37,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.DateOfPayment, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.DateOfPayment, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.DateOfPayment, new { htmlAttributes = new { @class = "form-control", @readonly ="readonly" } })
                     @Html.ValidationMessageFor(model => model.DateOfPayment, "", new { @class = "text-danger" })
                 </div>
             </div>
