--- a/UPPHercegovina.WebApplication/Views/AdminDashboard/Index.cshtml
+++ b/UPPHercegovina.WebApplication/Views/AdminDashboard/Index.cshtml
@@ -54,7 +54,7 @@
 
         var data = google.visualization.arrayToDataTable([
           ['Label', 'Value'],
-          ['Broj proizvoda', @Model.NumberOfProductsCount],
+          ['', @Model.NumberOfProductsCount],
 
         ]);
 
@@ -85,7 +85,7 @@
 
         var data = google.visualization.arrayToDataTable([
           ['Label', 'Value'],
-        ['Ukupno kg', @Model.SumKG]
+        ['', @Model.SumKG]
         ]);
 
         var options = {
@@ -114,7 +114,7 @@
 
         var data = google.visualization.arrayToDataTable([
           ['Label', 'Value'],
-        ['Ukupno prodanih kg', @Model.SoldCountKG]
+        ['', @Model.SoldCountKG]
         ]);
 
         var options = {
@@ -166,23 +166,54 @@
       }
 </script>
 
-
 <script type="text/javascript">
-      //google.charts.load('current', {'packages':['bar']});
+
+    window.onresize = function () {
+        drawChart();
+    };
+    //google.charts.load('current', { 'packages': ['gauge', 'corechart', 'bar', 'map'] });
+
+      //google.charts.load('current', {'packages':['corechart']});
       google.charts.setOnLoadCallback(drawChart);
       function drawChart() {
+
         var data = google.visualization.arrayToDataTable([
-          ['Year', 'Sales', 'Expenses', 'Profit'],
-          ['2014', 1000, 400, 200],
-          ['2015', 1170, 460, 250],
-          ['2016', 660, 1120, 300],
-          ['2017', 1030, 540, 350]
+          ['Uloga korisnika', 'Broj'],
+          ['Korisnici',     @ViewBag.UserNo],
+          ['Administratori',      @ViewBag.AdminNo],
+          ['Nakupac',  @ViewBag.NNo],
+
         ]);
 
         var options = {
+            title: 'Odnos broja korisnika i njihovih uloga u sistemu',
+            pieSliceText: 'label',
+            is3D:true,
+
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('userchart'));
+
+        chart.draw(data, options);
+      }
+</script>
+
+
+
+<script type="text/javascript">
+      //google.charts.load('current', {'packages':['bar']});
+    google.charts.setOnLoadCallback(drawChart);
+
+    var YVData = JSON.parse('@ViewBag.GVData');
+
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable(YVData);
+
+        var options = {
           chart: {
-            title: 'Company Performance',
-            subtitle: 'Sales, Expenses, and Profit: 2014-2017',
+            title: 'Proizvodi u skladištu',
+            subtitle: 'Vrijednosti po godini isticanja roka',
+              color:'gold',
           }
         };
 
@@ -281,14 +312,17 @@
 <div class="row">
     <div class="col-md-4">
         <div class="panel panel-default">
-            <div class="panel panel-heading" style="text-align:center">Broj registrovanih korisnika</div>
-            <div class="row">
-                <div class="col-md-3">
+            <div class="panel panel-heading" style="text-align:center">Ukupno prodanih kg</div>
+
+            <div class="panel-body">
+
+                <div id="perf_3">
+
                 </div>
 
-                <h1 style="text-align:center;  color:red">55</h1>
-
             </div>
+
+
 
         </div>
     </div>
@@ -296,25 +330,21 @@
 
     <div class="col-md-4">
         <div class="panel panel-default">
-            <div class="panel panel-heading" style="text-align:center">Broj administraotra</div>
-            <div class="row">
-                <div class="col-md-3">
+            <div class="panel panel-heading" style="text-align:center">Ukupno kg</div>
+            <div class="panel-body">
+                <div id="perf_2">
+
                 </div>
-
-                <h1 style="text-align:center;  color:blanchedalmond">55</h1>
-
             </div>
 
         </div>
     </div><div class="col-md-4">
         <div class="panel panel-default">
-            <div class="panel panel-heading" style="text-align:center">Broj nakupaca</div>
-            <div class="row">
-                <div class="col-md-3">
+            <div class="panel panel-heading" style="text-align:center">Broj proizvoda</div>
+            <div class="panel-body">
+                <div id="perf_div">
+
                 </div>
-
-                <h1 style="text-align:center;  color:azure">55</h1>
-
             </div>
 
         </div>
@@ -325,45 +355,17 @@
 
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <div class="panel-body">
-
-            <div id="perf_3">
-
-            </div>
-
-        </div>
-    </div>
-
-    <div class="col-md-4">
-
-        <div class="panel-body">
-            <div id="perf_2">
-
-            </div>
-        </div>
-    </div>
-
-    <div class="col-md-4">
-        <div class="panel-body">
-            <div id="perf_div">
-
-            </div>
-        </div>
-    </div>
-</div>
 
 
 <br />
 <div class="container">
-    <div class="col-md-12">
+    @*<div class="col-md-12">
         <div class="panel panel-danger">
             <div class="panel-body">
                 <div style="position:center" id="chart_div"></div>
             </div>
         </div>
-    </div>
+    </div>*@
 
     <div class="col-md-3">
         <div class="panel panel-danger">
@@ -390,7 +392,15 @@
     <div class="col-md-12">
         <div class="panel panel-danger">
             <div class="panel-body">
-                <div id="piechart"></div>
+                <div id="piechart" style="height:350px"></div>
+
+            </div>
+        </div>
+    </div>
+    <div class="col-md-12">
+        <div class="panel panel-danger">
+            <div class="panel-body">
+                <div id="userchart" style="height:350px"></div>
 
             </div>
         </div>
@@ -399,7 +409,7 @@
     <div class="col-md-12">
         <div class="panel panel-danger">
             <div class="panel-body">
-                <div id="columnchart_material"></div>
+                <div id="columnchart_material" style="height:350px"></div>
             </div>
         </div>
     </div>
@@ -408,7 +418,7 @@
     <div class="col-md-12">
         <div class="panel panel-danger">
             <div class="panel-body">
-                <div id="div_po"></div>
+                <div id="div_po" style="height:350px"></div>
             </div>
         </div>
     </div>
@@ -418,104 +428,40 @@
 
 <div class="container">
 
-    <div class="panel panel-default">
-        <div class="panel panel-heading" style="text-align:center"> Lokacije Skladišta</div>
-        <div class="panel panel-body" style="margin:0px">
-            <div class="col-xs-12" style="height:350px;">
-                <div id="map" style="height:100%; border:dotted"></div>
 
-
-                <script>
-
-                            console.log("pocelo je");
-                            var nizSkladista=[];
-
-                            var arraySkladista = @Html.Raw(Json.Encode(@ViewBag.lokacijeSkladista));
-                    for(var i = 0; i < arraySkladista.length; i++) {
-                        nizSkladista[i] = arraySkladista[i];
-                            }
-                            for (var i = 0; i < niz.length; i++) {
-                                console.log("Lat: "+niz[i].Latitude.toString()+", Lng: "+array[i].Longitude.toString());
-
-                            }
-
-                            var x = array;
-
-                            console.log("kraj loop - ");
-
-                            function initMap() {
-
-                                console.log("u initMap(): "+niz[0].Latitude+", lng: "+niz[0].Longitude);
-
-                                var myLatLng = {lat:43.1118, lng:17.7055};
-
-                                console.log("LAT LNG: "+myLatLng);
-
-
-                                var map = new google.maps.Map(document.getElementById('map'), {
-                                    zoom: 8,
-                                    center: myLatLng
-
-                                });
-
-
-                                for (var i = 0; i < niz.length; i++) {
-                                    var lat_lng = new google.maps.LatLng(parseFloat( nizSkladista[i].Latitude.toString()),parseFloat( nizSkladista[i].Longitude.toString()));
-                                    addMarker(lat_lng);
-                                }
-
-                                function addMarker(location) {
-                                    var marker = new google.maps.Marker({
-                                        position: location,
-                                        map: map
-                                    })};
-
-                                }
-
-
-                </script>
-                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZ0Bah24dB4oqaIN9peo9nnFAnboZjzmY&callback=initMap"
-                        async defer></script>
-
-            </div>
-
-        </div>
-    </div>
 
 
     <br />
     <div class="panel panel-default">
-        <div class="panel panel-heading" style="text-align:center"> Lokacije Opstina</div>
+        <div class="panel panel-heading" style="text-align:center"> Lokacije Opstina i Skladista</div>
         <div class="panel panel-body" style="margin:0px">
             <div class="col-xs-12" style="height:350px;">
-                <div id="map2" style="height:100%; border:dotted"></div>
+                <div id="map2" style="height:100%;"></div>
 
 
                 <script>
 
                             console.log("pocelo je xXXXXXxxx");
                             var niz=[];
-
+                            var nizW=[];
                             var array = @Html.Raw(Json.Encode(@ViewBag.lokacijeOpstina));
+
+                            var arrayW = @Html.Raw(Json.Encode(@ViewBag.lokacijeSkladista));
+
                             for(var i = 0; i < array.length; i++) {
                                 niz[i] = array[i];
+                                nizW[i] = arrayW[i];
                             }
-                            for (var i = 0; i < niz.length; i++) {
-                                console.log("Lat: "+niz[i].Latitude.toString()+", Lng: "+array[i].Longitude.toString());
 
-                            }
 
                             var x = array;
 
-                            console.log("kraj loop - ");
 
                             function initMap() {
 
-                                console.log("u initMap(): "+niz[0].Latitude+", lng: "+niz[0].Longitude);
 
                                 var myLatLng = {lat:43.1118, lng:17.7055};
 
-                                console.log("LAT LNG: "+myLatLng);
 
 
                                 var map = new google.maps.Map(document.getElementById('map2'), {
@@ -530,6 +476,11 @@
                                     addMarker(lat_lng);
                                 }
 
+                                for (var i = 0; i < nizW.length; i++) {
+                                    var lat_lng = new google.maps.LatLng(parseFloat( nizW[i].Latitude.toString()),parseFloat( nizW[i].Longitude.toString()));
+                                    addMarkerW(lat_lng);
+                                }
+
 
                                 @*var n = @Model;
 
@@ -541,7 +492,19 @@
                                 function addMarker(location) {
                                     var marker = new google.maps.Marker({
                                         position: location,
-                                        map: map
+                                        map: map,
+                                        title:'opstine',
+
+
+                                    })};
+                                function addMarkerW(location) {
+                                    var marker = new google.maps.Marker({
+                                        position: location,
+                                        map: map,
+                                        title:'sivamapa',
+
+                                        icon:'http://maps.google.com/mapfiles/ms/icons/blue-dot.png'
+
                                     })};
 
                                 }
@@ -560,84 +523,4 @@
     <br />
 
 
-    @*<div class="panel panel-success" style="height:298px; ">
-        <div class="panel panel-heading" style="text-align:center">Mape skladišta</div>
-        <div class="panel-body">
-            <div id="test"style="height:100%; " @*style="width: 400px; height: 300px"*@>
-    @*<script>
-
-                    console.log("pocelo je");
-                    var niz=[];
-
-                    var array = @Html.Raw(Json.Encode(@ViewBag.lokacije));
-                    for(var i = 0; i < array.length; i++) {
-                        niz[i] = array[i];
-                    }
-                    for (var i = 0; i < niz.length; i++) {
-                        console.log("Lat: "+niz[i].Latitude.toString()+", Lng: "+array[i].Longitude.toString());
-
-                    }
-
-                    var x = array;
-
-                    console.log("kraj loop - ");
-
-                    function initMap() {
-
-                        console.log("u initMap(): "+niz[0].Latitude+", lng: "+niz[0].Longitude);
-
-                        var myLatLng = {lat:43.1118, lng:17.7055};
-
-                        console.log("LAT LNG: "+myLatLng);
-
-
-                        var map = new google.maps.Map(document.getElementById('test'), {
-                            zoom: 8,
-                            center: myLatLng
-
-                        });
-
-
-                        for (var i = 0; i < niz.length; i++) {
-                            var lat_lng = new google.maps.LatLng(parseFloat( niz[i].Latitude.toString()),parseFloat( niz[i].Longitude.toString()));
-                            addMarker(lat_lng);
-                        }
-
-                        function addMarker(location) {
-                            var marker = new google.maps.Marker({
-                                position: location,
-                                map: map
-                            })};
-
-                        }
-
-
-        </script>*@
-    @*<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZ0Bah24dB4oqaIN9peo9nnFAnboZjzmY&callback=initMap"
-        async defer></script>*@
 </div>
-
-@*</div>
-        </div>
-
-
-            <div class="panel panel-danger">
-                <div class="panel panel-heading" style="text-align:center">Mape skladišta</div>
-                <div class="panel-body">
-                    <div id="map_div" @*style="width: 400px; height: 300px"></div>
-
-                </div>
-            </div>
-
-
-        <div class="panel panel-danger">
-            <div class="panel panel-heading" style="text-align:center">Mape Opština</div>
-            <div class="panel-body">
-                <div id="map_opstina" @*style="width: 400px; height: 300px"></div>
-
-            </div>
-        </div>
-        <div class="col-md-6" id="chart_div1">
-
-        </div>
-    </div>*@
