--- a/UPPHercegovina.WebApplication/Views/BuyerRequests/Create.cshtml
+++ b/UPPHercegovina.WebApplication/Views/BuyerRequests/Create.cshtml
@@ -5,12 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+<script src="/resources/demos/external/jquery-mousewheel/jquery.mousewheel.js"></script>
+
 <h2>Dodaj novi zahtjev</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Zahtjev nakupca</h4>
         <hr />
@@ -31,6 +37,12 @@
                 @Html.ValidationMessageFor(model => model.DateOfPickUp, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        @*<script type="text/javascript">
+            $(function () { // will trigger when the document is ready
+                $('.datepicker').datepicker(); //Initialise any date pickers
+            });
+        </script>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -113,3 +125,8 @@
 <div>
     @Html.ActionLink("Nazad na listu", "Index")
 </div>
+<script>
+    $("#DateOfPickUp").datepicker({
+        dateFormat: 'mm-dd-yy'
+    });
+</script>
