--- a/UPPHercegovina.WebApplication/Views/Fields/Create.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Fields/Create.cshtml
@@ -46,7 +46,7 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Dodaj" class="btn btn-success" />
+                        <input type="submit" value="Dodaj" class="btn btn-default" />
                     </div>
                 </div>
 
