--- a/UPPHercegovina.WebApplication/Views/PersonProducts/Edit.cshtml
+++ b/UPPHercegovina.WebApplication/Views/PersonProducts/Edit.cshtml
@@ -7,6 +7,12 @@
 
 <h2>Izmjeni proizvod</h2>
 
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+<script src="/resources/demos/external/jquery-mousewheel/jquery.mousewheel.js"></script>
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -119,3 +125,11 @@
 <div>
     @Html.ActionLink("Nazad na listu", "Index")
 </div>
+<script>
+    $("#ExparationDate").datepicker({
+        dateFormat: 'mm-dd-yy'
+    });
+    $("#HarvestDate").datepicker({
+        dateFormat: 'mm-dd-yy'
+    });
+</script>
