--- a/UPPHercegovina.WebApplication/Views/PersonProducts/Index.cshtml
+++ b/UPPHercegovina.WebApplication/Views/PersonProducts/Index.cshtml
@@ -14,14 +14,13 @@
 @using (Html.BeginForm("Index", "PersonProducts"))
 {
     <div class="form-group">
-        <div class="col-md-10">
+        <div class="col-md-3">
             @Html.DropDownList("States", null, htmlAttributes: new { @class = "form-control" })
         </div>
     </div>
-
-    <input type="submit" value="Pretraga" />
+    <input type="submit" value="Pretraga" class="btn btn-default" />
 }
-
+<br />
 
 <table class="table">
     <tr>
