--- a/UPPHercegovina.WebApplication/Views/Processes/AcceptProcess.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Processes/AcceptProcess.cshtml
@@ -6,6 +6,11 @@
 }
 
 <h2>Prihvati proizvod</h2>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+<script src="/resources/demos/external/jquery-mousewheel/jquery.mousewheel.js"></script>
 
 @using (Html.BeginForm())
 {
@@ -15,7 +20,7 @@
     @Html.HiddenFor(model => model.FieldId)
     @Html.HiddenFor(model => model.UserId)
     @Html.HiddenFor(model => model.ProductId)
-
+    @Html.HiddenFor(model => model.HarvestDate)
 
 
     <div class="form-horizontal">
@@ -51,7 +56,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.HarvestDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.HarvestDate, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                @Html.EditorFor(model => model.HarvestDate, new { htmlAttributes = new { @class = "form-control datepicker", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.HarvestDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -147,9 +152,15 @@
                 <input type="submit" value="Prihvati" class="btn btn-default" />
             </div>
         </div>
+
     </div>
 }
 
 <div>
     @Html.ActionLink("Nazad na listu", "Processing")
 </div>
+<script>
+    $("#ExparationDate").datepicker({
+        dateFormat: 'mm-dd-yy'
+    });
+</script>
