--- a/UPPHercegovina.WebApplication/Views/UserMemberships/Stats.cshtml
+++ b/UPPHercegovina.WebApplication/Views/UserMemberships/Stats.cshtml
@@ -12,13 +12,14 @@
 @using (Html.BeginForm("Stats", "UserMemberships"))
 {
     <div class="form-group">
-        <div class="col-md-10">
+        <div class="col-xs-3">
             @Html.DropDownList("Memberships", null, htmlAttributes: new { @class = "form-control" })
         </div>
     </div>
     
-    <input type="submit" value="Pretraga"/>
+    <input type="submit" value="Pretraga" class="btn btn-default"/>
 }
+<br />
 
 <table class="table">
     <tr>
