--- a/UPPHercegovina.WebApplication/Views/WarehouseProducts/Index.cshtml
+++ b/UPPHercegovina.WebApplication/Views/WarehouseProducts/Index.cshtml
@@ -11,13 +11,14 @@
 @using (Html.BeginForm("Index", "WarehouseProducts"))
 {
     <div class="form-group">
-        <div class="col-md-10">
+        <div class="col-xs-3">
             @Html.DropDownList("States", null, htmlAttributes: new { @class = "form-control" })
         </div>
     </div>
 
-    <input type="submit" value="Pretraga" />
+    <input type="submit" value="Pretraga" class="btn btn-default" />
 }
+<br />
 
 <table class="table">
     <tr>
