--- a/UPPHercegovina.WebApplication/Views/AdminDashboard/Index.cshtml
+++ b/UPPHercegovina.WebApplication/Views/AdminDashboard/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model UPPHercegovina.WebApplication.Models.AdminDashboardViewModel
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Pregled / Grafički prikazi";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -306,7 +306,7 @@
         async defer></script>
 
 
-<h2 style="text-align:center; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Admin Dashboard</h2>
+<h2 style="text-align:center; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Grafički statistički prikazi</h2>
 
 
 <div class="row">
