--- a/UPPHercegovina.WebApplication/Views/BuyerProducts/Details.cshtml
+++ b/UPPHercegovina.WebApplication/Views/BuyerProducts/Details.cshtml
@@ -88,7 +88,7 @@
     </div>
 
     <div class="col-xs-6">
-        <div id="map" class="mapa" style="border:double; height:298px;"></div>
+        <div id="map" class="mapa" style="border:thin; border-color:#473581; height:298px;"></div>
 
         <script>
 
