--- a/UPPHercegovina.WebApplication/Views/Fields/Details.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Fields/Details.cshtml
@@ -25,7 +25,7 @@
             <div class="row">
 
                 <div class="col-md-4">
-                    <div id="map" class="mapa" style="border:double; height:298px;"></div>
+                    <div id="map" class="mapa" style="border:thin; border-color:#473581; height:298px;"></div>
 
                     <script>
 
