--- a/UPPHercegovina.WebApplication/Views/Posts/Details.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Posts/Details.cshtml
@@ -108,7 +108,7 @@
                 <h4>Naša skladišta</h4>
                 <div class="row">
                     <div class="col-xs-12" style="height:300px;">
-                        <div id="map" style="height:100%; border:dotted"></div>
+                        <div id="map" style="height:100%; border:thin; border-color:#473581;"></div>
 
 
                         <script>
