--- a/UPPHercegovina.WebApplication/Views/Processes/Processing.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Processes/Processing.cshtml
@@ -65,7 +65,7 @@
         </td>
         <td>
             @Html.ActionLink("Prihvati", "AcceptProcess", new { id=item.Id }) |
-            @Html.ActionLink("Odbi", "RejectProcess", new { id=item.Id })
+            @Html.ActionLink("Odbij", "RejectProcess", new { id=item.Id })
         </td>
     </tr>
 }
