--- a/UPPHercegovina.WebApplication/Views/Processes/RejectProcess.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Processes/RejectProcess.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UPPHercegovina.WebApplication.Models.PersonProduct
 
 @{
-    ViewBag.Title = "Odbi / Proizvod proizvođača";
+    ViewBag.Title = "Odbij / Proizvod proizvođača";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -96,7 +96,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Odbi" class="btn btn-default" /> |
+            <input type="submit" value="Odbij" class="btn btn-default" /> |
             @Html.ActionLink("Nazad na listu", "Processing")
         </div>
     }
