--- a/UPPHercegovina.WebApplication/Views/Requests/Details.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Requests/Details.cshtml
@@ -121,7 +121,7 @@
     {
         <div>
             @Html.ActionLink("Odobri", "ProcessRequest", new { id = Model.Id, status = true }) |
-            @Html.ActionLink("Odbi", "ProcessRequest", new { id = Model.Id, status = false }) |
+            @Html.ActionLink("Odbij", "ProcessRequest", new { id = Model.Id, status = false }) |
         </div>
     }
     @Html.ActionLink("Nazad na listu", "ActiveRequests")
