--- a/UPPHercegovina.WebApplication/Views/WarehouseStats/Index.cshtml
+++ b/UPPHercegovina.WebApplication/Views/WarehouseStats/Index.cshtml
@@ -102,6 +102,7 @@
         </td>
 
         <td>
+            @Html.ActionLink("Izmjeni", "Edit", new { id = item.Id }) |
             @Html.ActionLink("Detalji", "Details", new { id = item.Id }) |
             @Html.ActionLink("Ukloni", "RemoveFromWarehouse", new { id = item.Id })
         </td>
