--- a/UPPHercegovina.WebApplication/Content/bootstrap.css
+++ b/UPPHercegovina.WebApplication/Content/bootstrap.css
@@ -1096,13 +1096,14 @@ textarea {
   font-size: inherit;
   line-height: inherit;
 }
+
 a {
-  color: #337ab7;
+  color: #836295;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #23527c;
+  color: #35074F;
   text-decoration: underline;
 }
 a:focus {
@@ -4595,110 +4596,160 @@ fieldset[disabled] .navbar-default .btn-link:hover,
 fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
+
+/*Ovo je pozadina i granica*/
 .navbar-inverse {
-  background-color: #222;
-  border-color: #080808;
-}
-.navbar-inverse .navbar-brand {
-  color: #9d9d9d;
+  /*background-color: #222;*/
+  /*border-color: #080808;*/
+  background-color: #35074F;
+  border-bottom-color: #0B012D;
 
 }
+
+/*Ovo je Tekst od UPPHercegovina*/
+.navbar-inverse .navbar-brand {
+  /*color: #9d9d9d;*/
+  color: #BBB4BE;
+
+}
+
+/*UPPHercegovina Hover*/
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
-  color: #fff;
+  /*color: #fff;*/
+  color: #836295;
   background-color: transparent;
 }
+
+/*Nisam uocio promjene*/
 .navbar-inverse .navbar-text {
   color: #9d9d9d;
   /*color: white;*/
 }
+
+/*Boja ostalog teksta*/
 .navbar-inverse .navbar-nav > li > a {
-  color: #9d9d9d;
+  /*color: #9d9d9d;*/
+  color: #BBB4BE;
+
 }
+
+/*Hover ostalog teksta*/
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #fff;
+  /*color: #fff;*/
+  color: #836295;
   background-color: transparent;
 }
+
+/*Ne kontam sta je*/
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
   color: #fff;
   background-color: #080808;
 }
+
+/*Ne kontam sta je*/
 .navbar-inverse .navbar-nav > .disabled > a,
 .navbar-inverse .navbar-nav > .disabled > a:hover,
 .navbar-inverse .navbar-nav > .disabled > a:focus {
   color: #444;
   background-color: transparent;
 }
+
+/*Ne kontam sta je*/
 .navbar-inverse .navbar-toggle {
   border-color: #333;
 }
+
+/*Ne kontam sta je*/
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus {
   background-color: #333;
 }
+
+/*Ne kontam sta je*/
 .navbar-inverse .navbar-toggle .icon-bar {
   background-color: #fff;
 }
+
+/*Ne kontam sta je*/
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
   border-color: #101010;
 }
+
+/*Na press boja slova i pozadine*/
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:hover,
 .navbar-inverse .navbar-nav > .open > a:focus {
-  color: #fff;
-  background-color: #080808;
+  color: #BBB4BE;
+  background-color: #0B012D;
 }
+
+
 @media (max-width: 767px) {
   .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
     border-color: #080808;
   }
+
   .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
     background-color: #080808;
   }
+
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
     color: #9d9d9d;
   }
+
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
     color: #fff;
     background-color: transparent;
   }
+
+
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #fff;
     background-color: #080808;
   }
+
   .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a,
-  .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:hover,
+  .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:hover, 
   .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:focus {
     color: #444;
     background-color: transparent;
   }
+
 }
+
+
 .navbar-inverse .navbar-link {
   color: #9d9d9d;
 }
+
 .navbar-inverse .navbar-link:hover {
   color: #fff;
 }
+
 .navbar-inverse .btn-link {
   color: #9d9d9d;
 }
+
 .navbar-inverse .btn-link:hover,
 .navbar-inverse .btn-link:focus {
   color: #fff;
 }
+
 .navbar-inverse .btn-link[disabled]:hover,
 fieldset[disabled] .navbar-inverse .btn-link:hover,
 .navbar-inverse .btn-link[disabled]:focus,
 fieldset[disabled] .navbar-inverse .btn-link:focus {
   color: #444;
 }
+
 .breadcrumb {
   padding: 8px 15px;
   margin-bottom: 20px;
@@ -4717,15 +4768,19 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .breadcrumb > .active {
   color: #777;
 }
+
 .pagination {
   display: inline-block;
   padding-left: 0;
   margin: 20px 0;
   border-radius: 4px;
 }
+
 .pagination > li {
   display: inline;
 }
+
+/*Paging, boja trente u ostalih*/
 .pagination > li > a,
 .pagination > li > span {
   position: relative;
@@ -4733,31 +4788,35 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.42857143;
-  color: #337ab7;
+  color: #BBB4BE;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #ddd;
 }
+
 .pagination > li:first-child > a,
 .pagination > li:first-child > span {
   margin-left: 0;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
+
 .pagination > li:last-child > a,
 .pagination > li:last-child > span {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+
 .pagination > li > a:hover,
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
   z-index: 2;
-  color: #23527c;
+  color: #35074F;
   background-color: #eee;
   border-color: #ddd;
 }
+
 .pagination > .active > a,
 .pagination > .active > span,
 .pagination > .active > a:hover,
@@ -4767,9 +4826,10 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   z-index: 3;
   color: #fff;
   cursor: default;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #836295;
+  border-color: #836295;
 }
+
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
 .pagination > .disabled > span:focus,
@@ -4781,47 +4841,56 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   background-color: #fff;
   border-color: #ddd;
 }
+
 .pagination-lg > li > a,
 .pagination-lg > li > span {
   padding: 10px 16px;
   font-size: 18px;
   line-height: 1.3333333;
 }
+
 .pagination-lg > li:first-child > a,
 .pagination-lg > li:first-child > span {
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
 }
+
 .pagination-lg > li:last-child > a,
 .pagination-lg > li:last-child > span {
   border-top-right-radius: 6px;
   border-bottom-right-radius: 6px;
 }
+
 .pagination-sm > li > a,
 .pagination-sm > li > span {
   padding: 5px 10px;
   font-size: 12px;
   line-height: 1.5;
 }
+
 .pagination-sm > li:first-child > a,
 .pagination-sm > li:first-child > span {
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px;
 }
+
 .pagination-sm > li:last-child > a,
 .pagination-sm > li:last-child > span {
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
 }
+
 .pager {
   padding-left: 0;
   margin: 20px 0;
   text-align: center;
   list-style: none;
 }
+
 .pager li {
   display: inline;
 }
+
 .pager li > a,
 .pager li > span {
   display: inline-block;
@@ -4830,19 +4899,23 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   border: 1px solid #ddd;
   border-radius: 15px;
 }
+
 .pager li > a:hover,
 .pager li > a:focus {
   text-decoration: none;
   background-color: #eee;
 }
+
 .pager .next > a,
 .pager .next > span {
   float: right;
 }
+
 .pager .previous > a,
 .pager .previous > span {
   float: left;
 }
+
 .pager .disabled > a,
 .pager .disabled > a:hover,
 .pager .disabled > a:focus,
@@ -4851,6 +4924,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   cursor: not-allowed;
   background-color: #fff;
 }
+
 .label {
   display: inline;
   padding: .2em .6em .3em;
@@ -4863,6 +4937,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   vertical-align: baseline;
   border-radius: .25em;
 }
+
 a.label:hover,
 a.label:focus {
   color: #fff;
@@ -5024,11 +5099,13 @@ a.badge:focus {
   margin-right: auto;
   margin-left: auto;
 }
+
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
   border-color: #337ab7;
 }
+
 .thumbnail .caption {
   padding: 9px;
   color: #333;
