--- a/UPPHercegovina.WebApplication/Views/BuyerRequests/TransactionDetails.cshtml
+++ b/UPPHercegovina.WebApplication/Views/BuyerRequests/TransactionDetails.cshtml
@@ -107,7 +107,7 @@
         </dl>
     </div>
     <div class="col-xs-6">
-        <div id="map" class="mapa" style="border:double; height:298px;"></div>
+        <div id="map" class="mapa" style="border:thin; border-color:#473581; height:298px;"></div>
 
         <script>
 
