--- a/UPPHercegovina.WebApplication/Views/Fields/Create.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Fields/Create.cshtml
@@ -58,7 +58,7 @@
                 <div class="row">
 
                     <div class="form-group">
-                        <div id="map" class="mapa" style="border:double; height:298px;"></div>
+                        <div id="map" class="mapa" style="border:thin; border-color:#473581; height:298px;"></div>
 
                         <script>
 
