--- a/UPPHercegovina.WebApplication/Views/Warehouses/Create.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Warehouses/Create.cshtml
@@ -86,7 +86,7 @@
             <div class="col-md-6">
                 <div class="row">
                     <div class="form-group">
-                        <div id="map" class="mapa" style="border:double; height:298px;"></div>
+                        <div id="map" class="mapa" style="border:thin; border-color:#473581; height:298px;"></div>
 
                         <script>
 
