--- a/UPPHercegovina.WebApplication/Views/Warehouses/Edit.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Warehouses/Edit.cshtml
@@ -87,7 +87,7 @@
             <div class="col-md-6">
 
                 <div class="form-group">
-                    <div id="map" class="mapa" style="border:double; height:298px;"></div>
+                    <div id="map" class="mapa" style="border:thin; border-color:#473581; height:298px;"></div>
 
                     <script>
 
